fix(TopStatBar): prevent last stat tooltip from overflowing screen

--- a/src/components/Pages/Leaderboards/LeaderBoard/LeaderBoardTBody/TopsVisualization/TopStatBar/TopStatBar.module.scss
+++ b/src/components/Pages/Leaderboards/LeaderBoard/LeaderBoardTBody/TopsVisualization/TopStatBar/TopStatBar.module.scss
@@ -39,6 +39,10 @@
   pointer-events: all;
 }
 
+.statBarWrapper .toolTip.top0 {
+  translate: calc(-50% - 30px);
+}
+
 .statBarWrapper :where(.top, .times) {
   --text-border-color: #1d1d1d;
   color: #fff;
